--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{ include = "agent", from = "src" }]
 [tool.poetry.dependencies]
 python = "^3.12"
 pydantic = ">=2,<3.0.0"
+chromadb = ">=0.5,<1.0.0"
 aiohttp  = ">=3,<4.0.0"
 pydantic-ai = ">=0.2,<1.0.0"
 
